syntax = 'proto3';

import "common.message.proto";
import "reference.model.proto";


message QueryIdentifierSequenceRequest {
    QueryBuilder query_builder = 1;
    optional string data_model = 2;
    optional string updated_at_from = 3;
    optional string updated_at_to = 4;
    optional RequestContext context = 5;
}

message QueryIdentifierSequenceResponse {
    repeated IdentifierSequence data = 1;
    string metadata = 2; 
}

message CreateIdentifierSequenceRequest {
    QueryBuilder query_builder = 1;
    string data_model = 2;
    string prefix = 3;
    int32 width = 4;
    optional RequestContext context = 5;

}

message GeneratedIdentifier {
    IdentifierSequence identity_sequence = 1;
    string identifier = 2;
    string prefix = 3;
    int32 width = 4;
}
message CreateIdentifierSequenceResponse {
    string metadata = 1; 
    GeneratedIdentifier data = 2;
}

message GetIdentifierSequenceResponse {
    string metadata = 1; 
    IdentifierSequence data = 2;
}
